[package]
name = "header-compressor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tendermint = "0.32.0"
serde_json = "1.0.96"
serde = "1.0.163"
serde_with="3.0.0"
tendermint-proto = {path = "../tendermint-rs/proto"}
prost = { version = "0.11", default-features = false }
